Fix overflowing checkbox issue

--- a/src/styles/components/_c-data-table.scss
+++ b/src/styles/components/_c-data-table.scss
@@ -69,7 +69,7 @@
   &__checkbox-cell {
     left: 0;
     position: sticky;
-    z-index: 9999;
+    z-index: 999;
     background: white;
   }
 
